v1.0.3: extract double, float and long magic numbers